Codes arranged so that streamlit app can be deployed. Dependency resolved.

--- a/converting_to_transformed_input.ipynb
+++ b/converting_to_transformed_input.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cv = CountVectorizer(ngram_range=(1,2))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +167,11 @@
     "    predicted_class_index = np.argmax(predicted_probabilities)\n",
     "    probability_predicted = model.predict_proba(input_data)\n",
     "    confidence = predicted_probabilities[0, predicted_class_index]\n",
-    "    print(probability_predicted,confidence)\n",
+    "    #print(probability_predicted,confidence)\n",
     "    \n",
     "    prediction_msg =expression_check(predicted_class)\n",
     "\n",
-    "    return prediction_msg\n",
+    "    return predicted_probabilities,prediction_msg\n",
     "\n",
     "# Load the saved model\n",
     "with open('sentiment_analysis_model.pkl', 'rb') as f:\n",
@@ -188,15 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.41742857 0.58257143]] 0.5825714285714284\n",
-      "It has Positive Sentiment.\n"
+      "(array([[0.41742857, 0.58257143]]), 'It has Positive Sentiment.')\n"
      ]
     }
    ],
@@ -208,11 +205,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112669"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "112669"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I feel confident in my abilities; I know I can handle any challenge.\n",
+      "0.04207936507936508\n",
+      "0.04\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I am dissatisfied with my internet service; it's slow and unreliable.\n",
+      "0.9284761904761903\n",
+      "0.93\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "I am feeling very stressed about my upcoming exams.\n",
+      "0.9672777777777776\n",
+      "0.97\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "I am thrilled with my new hobby; it brings me so much joy.\n",
+      "0.42445238095238097\n",
+      "0.42\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = [\n",
+    "    \"I am extremely happy with my new car; it drives smoothly and looks fantastic.\",\n",
+    "    \"I felt really disappointed with my performance in the meeting today.\",\n",
+    "    \"My vacation was absolutely wonderful; I enjoyed every single day.\",\n",
+    "    \"I am very frustrated with my computer; it keeps crashing and losing my work.\",\n",
+    "    \"I am proud of my achievements this year; I've worked hard and it paid off.\",\n",
+    "    \"I can't stand my new job; the work environment is toxic and stressful.\",\n",
+    "    \"I love spending time with my family; they always make me feel happy and supported.\",\n",
+    "    \"I am unhappy with my current living situation; the neighbors are too noisy.\",\n",
+    "    \"My health has improved significantly, and I feel better than ever.\",\n",
+    "    \"I regret my decision to move to this city; I feel lonely and out of place.\",\n",
+    "    \"I am excited about my upcoming project; it's going to be a great opportunity.\",\n",
+    "    \"I am worried about my financial situation; my expenses are too high.\",\n",
+    "    \"I feel confident in my abilities; I know I can handle any challenge.\",\n",
+    "    \"I am dissatisfied with my internet service; it's slow and unreliable.\",\n",
+    "    \"I am feeling very stressed about my upcoming exams.\",\n",
+    "    \"I am thrilled with my new hobby; it brings me so much joy.\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "for user_input in sentences[12:]:\n",
+    "    print(user_input)\n",
+    "    probabilities,result = predict_from_user_input(user_input, model, cv)\n",
+    "    print(probabilities[0][0])\n",
+    "    print(f\"{probabilities[0][0]:,.2f}\")\n",
+    "    print(type(probabilities[0][0]))\n",
+    "    print(result)\n",
+    "\n",
+    "    print(\"-\"*40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "112669"
+    "d = enchant.Dict(\"en_US\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<enchant.Dict at 0x1d51304a4d0>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
    ]
   },
   {
