Codes arranged so that streamlit app can be deployed. Dependency resolved again.

--- a/converting_to_transformed_input.ipynb
+++ b/converting_to_transformed_input.ipynb
@@ -16,14 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "import enchant   #for spelling correction and checking\n",
     "from nltk.metrics import edit_distance  # to find the case where spelling correction is needed\n",
-    "d = enchant.Dict(\"en_US\")\n",
+    "with open('enchant_dict.pkl', 'rb') as f:\n",
+    "    d = pickle.load(f)\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from nltk.corpus import wordnet as wn,stopwords\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@
     "    predicted_class_index = np.argmax(predicted_probabilities)\n",
     "    probability_predicted = model.predict_proba(input_data)\n",
     "    confidence = predicted_probabilities[0, predicted_class_index]\n",
-    "    #print(probability_predicted,confidence)\n",
+    "    print(probability_predicted,confidence)\n",
     "    \n",
     "    prediction_msg =expression_check(predicted_class)\n",
     "\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,32 +226,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "I am extremely happy with my new car; it drives smoothly and looks fantastic.\n",
+      "[[0.24002778 0.75997222]] 0.7599722222222222\n",
+      "0.2400277777777778\n",
+      "0.24\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I felt really disappointed with my performance in the meeting today.\n",
+      "[[0.87928175 0.12071825]] 0.8792817460317459\n",
+      "0.8792817460317459\n",
+      "0.88\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "My vacation was absolutely wonderful; I enjoyed every single day.\n",
+      "[[0.30549603 0.69450397]] 0.6945039682539685\n",
+      "0.30549603174603174\n",
+      "0.31\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I am very frustrated with my computer; it keeps crashing and losing my work.\n",
+      "[[0.91295238 0.08704762]] 0.9129523809523807\n",
+      "0.9129523809523807\n",
+      "0.91\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "I am proud of my achievements this year; I've worked hard and it paid off.\n",
+      "[[0.33685714 0.66314286]] 0.6631428571428571\n",
+      "0.3368571428571429\n",
+      "0.34\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I can't stand my new job; the work environment is toxic and stressful.\n",
+      "[[0.8585873 0.1414127]] 0.8585873015873013\n",
+      "0.8585873015873013\n",
+      "0.86\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "I love spending time with my family; they always make me feel happy and supported.\n",
+      "[[0.10379437 0.89620563]] 0.8962056277056276\n",
+      "0.1037943722943723\n",
+      "0.10\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I am unhappy with my current living situation; the neighbors are too noisy.\n",
+      "[[0.8735119 0.1264881]] 0.8735119047619047\n",
+      "0.8735119047619047\n",
+      "0.87\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "My health has improved significantly, and I feel better than ever.\n",
+      "[[0.04595238 0.95404762]] 0.954047619047619\n",
+      "0.04595238095238096\n",
+      "0.05\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I regret my decision to move to this city; I feel lonely and out of place.\n",
+      "[[0.9549881 0.0450119]] 0.9549880952380952\n",
+      "0.9549880952380952\n",
+      "0.95\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
+      "I am excited about my upcoming project; it's going to be a great opportunity.\n",
+      "[[0.43384235 0.56615765]] 0.566157647907648\n",
+      "0.43384235209235206\n",
+      "0.43\n",
+      "<class 'numpy.float64'>\n",
+      "It has Positive Sentiment.\n",
+      "----------------------------------------\n",
+      "I am worried about my financial situation; my expenses are too high.\n",
+      "[[0.86880556 0.13119444]] 0.8688055555555555\n",
+      "0.8688055555555555\n",
+      "0.87\n",
+      "<class 'numpy.float64'>\n",
+      "It has Negative Sentiment.\n",
+      "----------------------------------------\n",
       "I feel confident in my abilities; I know I can handle any challenge.\n",
+      "[[0.04207937 0.95792063]] 0.9579206349206351\n",
       "0.04207936507936508\n",
       "0.04\n",
       "<class 'numpy.float64'>\n",
       "It has Positive Sentiment.\n",
       "----------------------------------------\n",
       "I am dissatisfied with my internet service; it's slow and unreliable.\n",
+      "[[0.92847619 0.07152381]] 0.9284761904761903\n",
       "0.9284761904761903\n",
       "0.93\n",
       "<class 'numpy.float64'>\n",
       "It has Negative Sentiment.\n",
       "----------------------------------------\n",
       "I am feeling very stressed about my upcoming exams.\n",
+      "[[0.96727778 0.03272222]] 0.9672777777777776\n",
       "0.9672777777777776\n",
       "0.97\n",
       "<class 'numpy.float64'>\n",
       "It has Negative Sentiment.\n",
       "----------------------------------------\n",
       "I am thrilled with my new hobby; it brings me so much joy.\n",
+      "[[0.42445238 0.57554762]] 0.5755476190476191\n",
       "0.42445238095238097\n",
       "0.42\n",
       "<class 'numpy.float64'>\n",
@@ -280,7 +369,7 @@
     "]\n",
     "\n",
     "\n",
-    "for user_input in sentences[12:]:\n",
+    "for user_input in sentences:\n",
     "    print(user_input)\n",
     "    probabilities,result = predict_from_user_input(user_input, model, cv)\n",
     "    print(probabilities[0][0])\n",
@@ -318,6 +407,23 @@
    ],
    "source": [
     "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('enchant_dict.pkl', 'wb') as f:\n",
+    "    pickle.dump(d, f)"
    ]
   },
   {
